[tool.poetry]
name = "mywiki"
version = "0.1.0"
description = ""
authors = ["AshDavid12 <gaashdavid@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11.9"
langchain = "^0.2.7"
langchain-openai = "^0.1.14"
langchain-core = "^0.2.12"
pytube = "^15.0.0"
pydantic = "^2.8.2"
python-dotenv = "^1.0.1"
fastapi = "^0.111.1"
requests = "^2.32.3"
httpx = "^0.27.0"
uvicorn = "^0.30.1"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"